# app-brain-wide-bench

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  storage.py  worker.py
app/routers/: leaderboard.py  models.py  submissions.py  users.py
app/schemas/: __init__.py  base.py  models.py  scoring.py  submissions.py  users.py
app/scoring/: __init__.py  base.py  ts1.py
app/tasks/: score.py
examples/: score_local.py  submit_local.py
frontend/: app.js  dashboard.html  index.html  leaderboard.html  model_details.html  my_model_details.html  style.css  submission_details.html  submit.html
frontend/css/: style.css
frontend/js/: api.js  landing.js  leaderboard.js  model_details.js  nav_side.js  nav_top.js  tables.js  utils.js
frontend/mock_api/: leaderboard.json  models.json  models_details.json  submission_detail.json  submissions_list.json  tasks.json  teams.json  user_models.json  users_me.json
nginx/: nginx.conf
scripts/: deploy.sh
tests/: conftest.py  test_api.py  test_migrations.py  test_scoring.py
tests/fixtures/: load.py  ts1_baseline.json
tests/fixtures/mlp-baseline/ts1-licking_rate/0802ced5-33a3-405e-8336-b65ebc5cb07c/: seed_42.safetensors  seed_43.safetensors  seed_44.safetensors  seed_45.safetensors  seed_46.safetensors
tests/fixtures/mlp-baseline/ts1-licking_rate/f4eb56a4-8bf8-4bbc-a8f3-6e6535134bad/: seed_42.safetensors  (+4 more)
(+20 files in other folders)
