[project]
name = "app-brain-wide-bench"
version = "0.1.0"
description = "brain-wide-bench neural model benchmarking platform — backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",  # single driver: async for FastAPI, sync for Alembic
    "alembic>=1.13",
    "boto3>=1.34",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "ibl-benchmark[scoring]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "aiosqlite>=0.20",
]

[tool.uv]
python-preference = "managed"

[tool.uv.sources]
ibl-benchmark = { path = "../ibl-benchmark", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
